@@ -1,6 +1,16 @@
 package traceTest;
 
-import cli.*;
+import cli.CLI;
+import cli.CostumPrintStream;
+import cli.JBMCOutput;
+import cli.TraceParser;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.parallel.Execution;
+import org.junit.jupiter.api.parallel.ExecutionMode;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.Arguments;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import java.io.File;
 import java.io.IOException;
@@ -9,16 +19,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
-
-import org.apache.logging.log4j.LogManager;
-import org.apache.logging.log4j.Logger;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeAll;
-import org.junit.jupiter.api.parallel.Execution;
-import org.junit.jupiter.api.parallel.ExecutionMode;
-import org.junit.jupiter.params.ParameterizedTest;
-import org.junit.jupiter.params.provider.Arguments;
-import org.junit.jupiter.params.provider.MethodSource;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
@@ -40,28 +40,28 @@ public class TraceTests {
 
     public static Stream<Arguments> getParameters() {
         List<Arguments> params = new ArrayList<>();
-        params.add(Arguments.of("." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TraceTestCases.java",
-                "." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TmpTestOut.txt",
-                new ArrayList<>(Arrays.asList(new String[]{"k", "tt", "table"})),
+        params.add(Arguments.of("./testRes/traceTest/TraceTestCases.java",
+                "./testRes/traceTest/TmpTestOut.txt",
+                new ArrayList<>(Arrays.asList("k", "tt", "table")),
                 "test"));
-        params.add(Arguments.of("." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TraceTestCases.java",
-                "." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TmpTestOut2.txt",
+        params.add(Arguments.of("./testRes/traceTest/TraceTestCases.java",
+                "./testRes/traceTest/TmpTestOut2.txt",
                 new ArrayList<>(),
                 "test2"));
-        params.add(Arguments.of("." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TraceTestCases.java",
-                "." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TmpTestOut3.txt",
-                new ArrayList<>(Arrays.asList(new String[]{"iotable"})),
+        params.add(Arguments.of("./testRes/traceTest/TraceTestCases.java",
+                "./testRes/traceTest/TmpTestOut3.txt",
+                new ArrayList<>(List.of("iotable")),
                 "test3"));
-        params.add(Arguments.of("." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TraceTestCases.java",
-                "." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TmpTestOut4.txt",
+        params.add(Arguments.of("./testRes/traceTest/TraceTestCases.java",
+                "./testRes/traceTest/TmpTestOut4.txt",
                 new ArrayList<>(),
                 "test4"));
-        params.add(Arguments.of("." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TraceTestCases.java",
-                "." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TmpTestOut5.txt",
+        params.add(Arguments.of("./testRes/traceTest/TraceTestCases.java",
+                "./testRes/traceTest/TmpTestOut5.txt",
                 new ArrayList<>(),
                 "test5"));
-        params.add(Arguments.of("." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TraceTestCases.java",
-                "." + File.separator + "testRes" + File.separator + "traceTest" + File.separator + "TmpTestOut6.txt",
+        params.add(Arguments.of("./testRes/traceTest/TraceTestCases.java",
+                "./testRes/traceTest/TmpTestOut6.txt",
                 new ArrayList<>(),
                 "test6"));
 
@@ -71,7 +71,6 @@ public class TraceTests {
     @ParameterizedTest
     @MethodSource("getParameters")
     public void traceTest(String inputFile, String outFile, ArrayList<String> relevantVars, String functionName) {
-        Logger log = LogManager.getLogger(CLI.class);
         CLI.reset();
         CLI.runWithTrace = true;
         CLI.keepTranslation = true;
@@ -79,15 +78,15 @@ public class TraceTests {
         CLI.relevantVars.addAll(relevantVars);
         CLI.translateAndRunJBMC(inputFile);
         int idx = inputFile.lastIndexOf(File.separator);
-        String path = inputFile.substring(0, idx) + File.separator + "tmp" + File.separator + "xmlout.xml";
-        File f = new File(path) ;
+        String path = inputFile.substring(0, idx) + "/tmp/xmlout.xml";
+        File f = new File(path);
         assertTrue(f.exists());
         JBMCOutput output = TraceParser.parse(f, true);
         String traces = output.printAllTraces();
         String[] traceSplits = traces.split("\n");
         List<String> assignments = new ArrayList<>();
-        for(String s : traceSplits) {
-            if(s.startsWith("in line")) {
+        for (String s : traceSplits) {
+            if (s.startsWith("in line")) {
                 assignments.add(s);
             }
         }
@@ -97,7 +96,7 @@ public class TraceTests {
         try {
             List<String> lines = Files.readAllLines(reference.toPath());
             assertEquals(lines.size(), assignments.size());
-            for(int i = 0; i < lines.size(); ++i) {
+            for (int i = 0; i < lines.size(); ++i) {
                 assertEquals(lines.get(i).trim(), assignments.get(i).trim());
             }
         } catch (IOException e) {
